@@ -1,7 +1,9 @@
 2016-10-11  Javier Esteban Salazar Loyola  <jsalazarloyola@gmail.com>
 
-	* gui/mainWindow.py: Moved buttons to __createButtons method.
+	* gui/mainWindow.py: Move import to the head of the file.
+	(MainApp): Moved buttons to __createButtons method.
 	Add Pause toggle button with basic functionality.
+	(MainApp.__onExportClicked): Add basic save dialog.
 
 2016-10-07  Javier Esteban Salazar Loyola  <jsalazarloyola@gmail.com>
 
